blog post alignment fix

--- a/src/components/blogPost/blogPost.scss
+++ b/src/components/blogPost/blogPost.scss
@@ -3,7 +3,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 3% 10%;
+  margin: 10px 10%;
+  min-height: calc(100vh - 115px);
 
   .title {
     font-size: 30px;
